# lubex-compiler

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README  README.md  build.bat  build.ps1  build.sh  format.sh  setup.sh  test.bat  test.ps1  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci_matrix.yml  code_quality.yml
compiler/: CMakeLists.txt  build.sh
compiler/includes/: compile.hpp  config.hpp  debug.hpp  emiter.hpp  error.hpp  evaluator.hpp  hash128.hpp  init.hpp  lexer.hpp  optimizer.hpp
compiler/includes/LIR/: lir.hpp
compiler/includes/emiter/: emiter.hpp  object.hpp
compiler/includes/parser/: ast.hpp  context.hpp  parser.hpp
compiler/src/: compile.cpp  config.cpp  emiter.cpp  error.cpp  evaluator.cpp  init.cpp  lexer.cpp  main.cpp  optimizer.cpp  symbol.cpp
compiler/src/LIR/: lir.cpp
compiler/src/emiter/: emiter.cpp  generate_functions.cpp  generate_values.cpp  init.cpp  mangling.cpp  object.cpp  rtti.cpp  structs.cpp  types.cpp
compiler/src/parser/: ast.cpp  context.cpp  parser.cpp
compiler/tests/: evaluator_tests.cpp  evaluator_tests.hpp  lexer_tests.cpp  lexer_tests.hpp  lir_tests.cpp  lir_tests.hpp  optimizer_tests.cpp  optimizer_tests.hpp  parser_tests.cpp  run_integration_tests.sh
docs/: README.md  getting-started.md
docs/core/: README.md
docs/core/keywords/: class.md  const.md  extends.md  func.md  import.md  internal.md  let.md  module.md  null.md  override.md  private.md  public.md  return.md  static.md  this.md
docs/core/types/: Int.md  Nullable.md  Number.md  String.md
docs/std/: README.md
docs/std/Console/: out.md  write.md  writeLn.md
docs/std/Math/: power.md
includes/: ast.hpp  config.hpp  emiter.hpp  error.hpp  evaluator.hpp  lexer.hpp  optimizer.hpp  parser.hpp
includes/LIR/: lir.hpp
includes/parser/: ast.hpp  context.hpp  parser.hpp
runtime/: CMakeLists.txt
runtime/includes/: lbxhelpers.h  lbxint.h  lbxio.h  lbxlib.h  lbxmem.h  lbxobject.h  lbxos.h  lbxpanic.h  lbxstr.h  lbxtype.h  lbxvoid.h
runtime/src/: lbxentry.c  lbxhelpers.c  lbxint.c  lbxio.c  lbxmem.c  lbxobject.c  lbxos.c  lbxpanic.c  lbxstr.c  lbxvoid.c
runtime/tests/: runtime_tests.cpp
src/: ast.cpp  compile.cpp  config.cpp  emiter.cpp  error.cpp  evaluator.cpp  init.cpp  lexer.cpp  main.cpp  optimizer.cpp  parser.cpp  symbol.cpp
src/LIR/: lir.cpp
src/parser/: ast.cpp  context.cpp  parser.cpp
standard/: CMakeLists.txt
standard/includes/: console.h  math.h
standard/lubex/: std.lbx
standard/src/: console.c  math.c
tests/: evaluator_tests.cpp  lexer_tests.cpp  lexer_tests.hpp  optimizer_tests.cpp  parser_tests.cpp  parser_tests.hpp
